--- a/_posts/2015-08-01-Hello-SNA.md
+++ b/_posts/2015-08-01-Hello-SNA.md
@@ -1,14 +1,7 @@
 ---
-published: true
+published: false
 ---
 
-
-
----
-layout: post
-title: ""
-published: true
----
 Social Network Analysis and the American Revolution
 ========
 
