--- a/_posts/2015-08-01-Hello-SNA.md
+++ b/_posts/2015-08-01-Hello-SNA.md
@@ -6,12 +6,14 @@ published: true
 ---
 
 
+
 Here is a network graph of 254 revolutionary activists in Boston during the 1770s. I built this in Google Fusion Tables as part of an introductory lesson in social network analysis (SNA). Fusion Tables does not allow for any more sophisticated SNA beyond what you see below, but you can do it all in the browser with an easy technical learning curve.
 
-Two other network-analysis-in-the-browser services (which I haven't tried yet):
+Other free network-analysis-in-the-browser services (which I haven't tried yet):
 
 * [http://palladio.designhumanities.org/](http://palladio.designhumanities.org/)
 * [http://nodegoat.net/](http://nodegoat.net/)
+* [http://www.quadrigram.com/](http://www.quadrigram.com/)
 
 Back to Fusion Tables:
 Set "nodes" to 254 to see all of them. Use the +/- button to resize the graph. Use your mouse wheel to zoom in or out. Click and drag in the white space to move the entire graph. Hover over any node to see its edges and label.
