--- a/_posts/2015-10-04-subs2srs.md
+++ b/_posts/2015-10-04-subs2srs.md
@@ -6,7 +6,7 @@ published: false
 Making audiovisual Anki flashcards from episodes of "Avatar: The Last Airbender".
 
 1) Using "The Complete Book 1 Collection", which has French and Spanish audio tracks as well as English. (Note: I have not checked all of the episodes in the box for Spanish audio.)
-2) Rip the DVD to my hard drive using DVDFab (the free component only).
+2) Rip the DVD to my hard drive using DVDFab (the free component only). Don't save the video to my network drive--it will exceed my sotrage quota.
 3) Use Handbrake to pull out Episode 1 and convert it to MKV format.
 4) Use subs2srs to create the Anki flashcards.
 5) Set the Avatar deck to add only five new cards a day. I study each one carefully until I've learned it (assuming I don't delete or suspend it if I don't like it).
