--- a/_posts/2015-10-04-subs2srs.md
+++ b/_posts/2015-10-04-subs2srs.md
@@ -9,6 +9,7 @@ Making audiovisual Anki flashcards from episodes of "Avatar: The Last Airbender"
 2) Rip the DVD to my hard drive using DVDFab (the free component only). Don't save the video to my network drive--it will exceed my storage quota. Took about 30 minutes.
 3) Use Handbrake to pull out Episode 1 and convert it to MKV format.
 a. Use the Source button on Handbrake to open the dvd. Choose the "open a single file" option. DVDFab stores the dvd's SIO image under Libraries/Documents/DVDFab
+b. Handbrake settings: 
 
 
 4) Use subs2srs to create the Anki flashcards. I downloaded the [subtitle files](https://www.dropbox.com/s/4ac11e38bumj23r/subs2srs_es.zip?dl=0). This zip file includes Airbender Episodes 1,2,5,6, and the movies "Pan's Labyrinth", "Y Tu Mama Tambien", and "Matando Cabos". The Spanish and English subtitles in this package are hand-tuned to be correctly time-aligned, and optimized for subs2srs. 
