--- a/_posts/2015-10-04-subs2srs.md
+++ b/_posts/2015-10-04-subs2srs.md
@@ -25,7 +25,7 @@ b. Handbrake settings:
 
 -video: codec (h.264); constant quality (RF20); x264 tune (animation)
 
--audio: source(Spanich)
+-audio: source(Spanish)
 
 
 4) Use subs2srs to create the Anki flashcards. I downloaded the [subtitle files](https://www.dropbox.com/s/4ac11e38bumj23r/subs2srs_es.zip?dl=0). This zip file includes Airbender Episodes 1,2,5,6, and the movies "Pan's Labyrinth", "Y Tu Mama Tambien", and "Matando Cabos". The Spanish and English subtitles in this package are hand-tuned to be correctly time-aligned, and optimized for subs2srs. 
