--- a/_posts/2015-10-04-subs2srs.md
+++ b/_posts/2015-10-04-subs2srs.md
@@ -11,7 +11,7 @@ Making audiovisual Anki flashcards from episodes of "Avatar: The Last Airbender"
 
 3) Use Handbrake to pull out Episode 1 and convert it to MKV format.
 
-a. Use the Source button on Handbrake to open the dvd. Choose the "open a single file" option. DVDFab stores the dvd's SIO image under Libraries/Documents/DVDFab
+a. Use the Source button on Handbrake to open the dvd. Choose the "open a single file" option. DVDFab stores the dvd's ISO image under Libraries/Documents/DVDFab
 
 b. Handbrake settings:
 
