--- a/_posts/2015-10-04-subs2srs.md
+++ b/_posts/2015-10-04-subs2srs.md
@@ -32,4 +32,12 @@ b. Handbrake settings:
 
 4) Use subs2srs to create the Anki flashcards. I downloaded the [subtitle files](https://www.dropbox.com/s/4ac11e38bumj23r/subs2srs_es.zip?dl=0). This zip file includes Airbender Episodes 1,2,5,6, and the movies "Pan's Labyrinth", "Y Tu Mama Tambien", and "Matando Cabos". The Spanish and English subtitles in this package are hand-tuned to be correctly time-aligned, and optimized for subs2srs.
 
+subs2srs settings:
+
+-pad timings by 1250ms
+
+- normalize audio
+
+- in "Advanced subtitle options", choose context tab, and increase leading and trailing lines to 1 each, and include audio clip.
+
 5) Set the Avatar deck to add only five new cards a day, so as not to get slammed three weeks in. I study each one carefully until I've learned it (assuming I don't delete or suspend it if I don't like it).
