--- a/_posts/2015-10-04-subs2srs.md
+++ b/_posts/2015-10-04-subs2srs.md
@@ -38,6 +38,6 @@ subs2srs settings:
 
 - normalize audio
 
-- in "Advanced subtitle options", choose context tab, and increase leading and trailing lines to 1 each, and include audio clip.
+- in "Advanced subtitle options", choose context tab, and increase leading and trailing lines to 1 each. Don't include audio clip and snapshot here.
 
 5) Set the Avatar deck to add only five new cards a day, so as not to get slammed three weeks in. I study each one carefully until I've learned it (assuming I don't delete or suspend it if I don't like it).
