--- a/_posts/2015-10-04-subs2srs.md
+++ b/_posts/2015-10-04-subs2srs.md
@@ -40,4 +40,11 @@ subs2srs settings:
 
 - in "Advanced subtitle options", choose context tab, and increase leading and trailing lines to 1 each. Don't include audio clip and snapshot here.
 
-5) Set the Avatar deck to add only five new cards a day, so as not to get slammed three weeks in. I study each one carefully until I've learned it (assuming I don't delete or suspend it if I don't like it).
+5) Set up Anki to accept subs2srs file.
+
+a. Open Anki. Click Tools/Manage note types.
+
+Enter the code from [the template here](https://gist.github.com/emk/55caa3042d973947b195).
+
+
+Set the Avatar deck to add only five new cards a day, so as not to get slammed three weeks in. I study each one carefully until I've learned it (assuming I don't delete or suspend it if I don't like it).
