--- a/_posts/2015-10-04-subs2srs.md
+++ b/_posts/2015-10-04-subs2srs.md
@@ -1,19 +1,14 @@
-----
- layout: post
- title: Making Anki flashcards from episodes of "Avatar: The Last Airbender"
- permalink: subs2srs
- published: true
- categories: [Spanish]
-----
-
+---
+published: false
+---
 
 Making audiovisual Anki flashcards from episodes of "Avatar: The Last Airbender".
 
 1) I'm using "The Complete Book 1 Collection", which has French and Spanish audio tracks as well as English. (Note: I have not checked all of the episodes in the box for Spanish audio.)
 
-2) Rip the DVD to my hard drive using DVDFab, using the free component--HD Converter. Don't save the video to my network drive--it will exceed my storage quota. Took about 30 minutes for the whole dvd. Alternatively, choose one episode. Make sure to choose the Spanish audio track before ripping.
+2) Rip the DVD to my hard drive using [DVDFab](http://www.dvdfab.cn/), using the free component--HD Converter. Don't save the video to my network drive--it will exceed my storage quota. Took about 30 minutes for the whole dvd. Alternatively, choose one episode. Make sure to choose the Spanish audio track before ripping.
 
-3) Use Handbrake to pull out Episode 1 and convert it to MKV format.
+3) Use [Handbrake](https://handbrake.fr/) to pull out Episode 1 and convert it to MKV format.
 
 a. Use the Source button on Handbrake to open the dvd. Choose the "open a single file" option. DVDFab stores the dvd's ISO image under Libraries/Documents/DVDFab
 
@@ -33,7 +28,7 @@ b. Handbrake settings:
 
 - click "preview" to check it's working.
 
-4) Use subs2srs to create the Anki flashcards. I downloaded the [subtitle files](https://www.dropbox.com/s/4ac11e38bumj23r/subs2srs_es.zip?dl=0). This zip file includes Airbender Episodes 1,2,5,6, and the movies "Pan's Labyrinth", "Y Tu Mama Tambien", and "Matando Cabos". The Spanish and English subtitles in this package are hand-tuned to be correctly time-aligned, and optimized for subs2srs.
+4) Use [subs2srs](http://sourceforge.net/projects/subs2srs/) to create the Anki flashcards. I downloaded the [subtitle files](https://www.dropbox.com/s/4ac11e38bumj23r/subs2srs_es.zip?dl=0). This zip file includes Airbender Episodes 1,2,5,6, and the movies "Pan's Labyrinth", "Y Tu Mama Tambien", and "Matando Cabos". The Spanish and English subtitles in this package are hand-tuned to be correctly time-aligned, and optimized for subs2srs.
 
 subs2srs settings:
 
