--- a/_posts/2015-10-04-subs2srs.md
+++ b/_posts/2015-10-04-subs2srs.md
@@ -1,10 +1,7 @@
 ---
- layout: post
- title: Making Anki flashcards from episodes of Avatar: The Last Airbender
- permalink: "subs2srs"
- published: true
- categories: [Spanish]
+published: false
 ---
+
 Making audiovisual Anki flashcards from episodes of "Avatar: The Last Airbender".
 
 1) I'm using "The Complete Book 1 Collection", which has French and Spanish audio tracks as well as English. (Note: I have not checked all of the episodes in the box for Spanish audio.)
@@ -23,7 +20,9 @@ b. Handbrake settings:
 
 - Save to Libraries/Video
 
-- Picture: anamorphic (Strict); detelecine (default); decomb (default); denoise (off)
+- Picture: anamorphic (Strict)
+
+- Filters: detelecine (default); decomb (default); denoise (off)
 
 - video: codec (h.264); constant quality (RF20); x264 tune (animation)
 
